--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "version": "lerna version",
-    "publish": "lerna publish",
+    "publish": "lerna publish from-git",
     "build": "lerna run build --ignore demo",
     "lint": "npm run lint:es; npm run lint:style",
     "lint:es": "lerna run lint:es --no-bail --parallel",
