--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -17,5 +17,6 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "vite": "^3.0.3",
     "vue-template-compiler": "^2.7.8"
-  }
+  },
+  "gitHead": "67a9da04e6edd4daf9a8cde632bebf80e358039d"
 }
