--- a/packages/vue3-drr-grid-layout/package.json
+++ b/packages/vue3-drr-grid-layout/package.json
@@ -2,6 +2,9 @@
   "name": "@uniplore-public/vue3-drr-grid-layout",
   "version": "1.9.8",
   "description": "Vue3 grid layout with resize, drag and responsive",
+  "publishConfig": {
+    "access": "public"
+  },
   "keywords": [
     "grid",
     "grid-layout",
